objects/Laser_Artwork_Order__c.object
<CustomObject>
    <fields>
        <fullName>LIB_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LIB Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialist - LIB - Roger</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>COE - LIB</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_OrdersUfCN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LIS_Info_Received__c</fullName>
        <label>LIS Info Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LIS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LIS Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.(LIS Name)</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Specialists - LIS</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - RRP</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LSR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LSR Name</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Specialists - LAS - Beczkiewicz</value>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notContain</operation>
                <value>integration_user@adp.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Laser_F_I_Forms_Received__c</fullName>
        <label>Laser F&amp;I Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Laser_Install__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LIN#</label>
        <referenceTo>Laser_Install__c</referenceTo>
        <relationshipName>Laser_Artwork_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Status__c</fullName>
        <label>Last Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Followup_Date__c</fullName>
        <label>Last Follow-up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Librarian_Update__c</fullName>
        <label>Last Librarian Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Librarian_Notes__c</fullName>
        <label>Librarian Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Librarian_Status__c</fullName>
        <label>Librarian Status</label>
        <picklist>
            <picklistValues>
                <fullName>Form Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Library_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Library Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Received__c</fullName>
        <label>Logo Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logon_Prefix__c</fullName>
        <formula>Ship_CMF_Info__r.Logon_Prefix__c</formula>
        <label>Logon Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logon__c</fullName>
        <label>Logon</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Low_FA_Score_Approval__c</fullName>
        <label>Low FA Score Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_CMF__c</fullName>
        <formula>Ship_CMF_Info__r.Main_CMF__c</formula>
        <label>Main CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Ship_Date__c</fullName>
        <label>Media Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Move_Miles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Miles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Artwork_Needed__c</fullName>
        <label>New Artwork Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Follow_up_Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Follow-up Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Priority__c</fullName>
        <label>Order Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Day Rush</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Processing_Notes_FI__c</fullName>
        <label>Order Processing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Processing_Notes_Laser_Imaging__c</fullName>
        <label>Order Processing Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold-Pre FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q/S Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q/S Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork to LFD Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proofs to LAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms to LIS Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At LI Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval - ELF Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Data Mapping/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-CDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaded/Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval-FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved-FA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add/Change - DASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - eShowroom/Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - FI/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Change - WDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - DASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - eShowroom/Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - FI/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - Impact/Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install Concurrent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - DASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - eShowroom/Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - FI/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Install - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Eighty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW/CRM/Custom Pencil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to DC - FI/DC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSA_Forms_Received__c</fullName>
        <label>PSA Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Check_Order_Actual_End_Date__c</fullName>
        <inlineHelpText>Date Payroll Check Order Confirmation # is entered or Payroll Check Order is declined.</inlineHelpText>
        <label>Payroll Check Order Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Check_Order_Actual_Start_Date__c</fullName>
        <formula>IF(Payroll_Check_Order_Declined__c = True, Payroll_Check_Order_Actual_End_Date__c, Payroll_Check_Order_Placed__c)</formula>
        <label>Payroll Check Order Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Check_Order_Confirmation__c</fullName>
        <label>Payroll Check Order Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Check_Order_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll Check Order Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Check_Order_Placed__c</fullName>
        <label>Payroll Check Order Placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plain_Paper_Actual_End_Date__c</fullName>
        <inlineHelpText>Date Plain Paper Order Confirmation # is entered or Plain Paper Order is declined.</inlineHelpText>
        <label>Plain Paper Order Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plain_Paper_Order_Actual_Start_Date__c</fullName>
        <formula>IF( Plain_Paper_Order_Declined__c  = True, Plain_Paper_Actual_End_Date__c , Plain_Paper_Order_Placed__c )</formula>
        <label>Plain Paper Order Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plain_Paper_Order_Confirmation__c</fullName>
        <label>Plain Paper Order Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plain_Paper_Order_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plain Paper Order Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plain_Paper_Order_Placed__c</fullName>
        <label>Plain Paper Order Placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_FA_Completed__c</fullName>
        <label>Pre-FA Completed (FI/DC Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Paper_Order_Actual_End_Date__c</fullName>
        <inlineHelpText>Date Premium Paper Order Confirmation # is entered or Premium Paper Order is declined.</inlineHelpText>
        <label>Premium Paper Order Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Paper_Order_Actual_Start_Date__c</fullName>
        <formula>IF( Premium_Paper_Order_Declined__c = True, Premium_Paper_Order_Actual_End_Date__c,  Premium_Paper_Order_Placed__c )</formula>
        <label>Premium Paper Order Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Paper_Order_Confirmation__c</fullName>
        <label>Premium Paper Order Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Paper_Order_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Paper Order Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Paper_Order_Placed__c</fullName>
        <label>Premium Paper Order Placed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prev_SO__c</fullName>
        <label>Prev SO#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Impact_Link__c</fullName>
        <description>Open Impact Project</description>
        <formula>IF (NOT ( ISBLANK( Project__c )), hyperlink(&quot;http://&quot; &amp;  $Setup.CustomSettings__c.ImpactServer__c  &amp; &quot;/impact/NavigationForms/MainPage.aspx?ProjectId=&quot; &amp; Project__c, &quot;Open Impact Project&quot;), &quot; &quot;)</formula>
        <inlineHelpText>required Project #</inlineHelpText>
        <label>Project [Impact] Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project # [Impact]</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proofs_Required__c</fullName>
        <label>Proofs Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proofs_to_Client__c</fullName>
        <label>Proofs to Client</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proofs_to_LAS__c</fullName>
        <description>Proofs to LAS</description>
        <label>Proofs to LAS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Question_FC_Approval__c</fullName>
        <formula>If(NOT(ISBLANK(TEXT(Welcome_Kit_Type__c))),&quot;Completed Forms Package posted to KL&quot;,&quot;&quot;)</formula>
        <label>Question?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_for_Approval__c</fullName>
        <formula>IF(AND(ISPICKVAL(Order_Status__c,&quot;Artwork to LFD Team&quot;), OR(ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;))), &quot;Are mockups posted to KL?&quot;, 
IF(AND(ISPICKVAL(Order_Status__c,&quot;AWIP&quot;), OR(ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;))), &quot;Are mockups posted to KL?&quot;, 
IF(AND(ISPICKVAL(Order_Status__c,&quot;Proofs to LAS&quot;), OR(ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;))), &quot;Are proofs posted to KL?&quot;, 
IF(AND(ISPICKVAL(Order_Status__c,&quot;Burned&quot;), OR(ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;))), &quot;Is the final burn prep posted to KL? Did you verify final burn?&quot;, 
IF(AND(ISPICKVAL(Order_Status__c,&quot;At LI Team&quot;), OR(ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;), ISPICKVAL(Order_Type__c, &quot;Add/Change - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;),ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;))), &quot;Are final forms posted to Q: drive?&quot;,&quot;&quot;)))))</formula>
        <label>Question?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Sheet_Approved__c</fullName>
        <label>Quote Sheet Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Sheet_Submitted__c</fullName>
        <label>Quote Sheet Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RRP_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RRP Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Laser - RRP</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Laser_Artwork_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID_RMS_Link__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.RMS_Request_Link__c &amp; Request_ID_RMS__c, Request_ID_RMS__c,&quot;_blank&quot;)</formula>
        <label>Request ID (RMS) Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID_RMS__c</fullName>
        <label>Request ID (RMS)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision #</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date__c</fullName>
        <label>Roll Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEQ_s_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEQ #’s Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOA_Approved__c</fullName>
        <description>SOA Approved</description>
        <label>SOA Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOA_Ship_Confirmed__c</fullName>
        <description>SOA Ship Confirmed</description>
        <label>SOA Ship Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Approval_Indicated__c</fullName>
        <label>(SOX) Approval Indicated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Approved_by_Authority__c</fullName>
        <label>(SOX) Approved by Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Dealer_Name_in_e_mail__c</fullName>
        <label>(SOX) Dealer Name in e-mail</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Image_In_Quote__c</fullName>
        <label>(SOX) Image In Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Q_S_Match_Oracle__c</fullName>
        <label>(SOX) Q/S $ Match Oracle</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Q_S_Rcvd_in_KL__c</fullName>
        <label>(SOX) Q/S Rcvd in KL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSTT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_Data_Mapping_Other__c</fullName>
        <label>Sent To DASH</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Edge_Client__c</fullName>
        <label>Service Edge Client</label>
        <summarizedField>Laser_Ordered_Forms__c.Service_Edge_Client__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit_Code__c</fullName>
        <description>Ship CMF - Business Unit Code</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Business_Unit_Code__c</formula>
        <label>Ship CMF - Business Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Business_Unit__c</fullName>
        <description>Ship CMF Business Unit</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Business_Unit__c</formula>
        <label>Ship CMF - Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipName>R00N40000001m7zMEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code_Name__c</fullName>
        <description>Ship CMF - Region Code Name</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Region_Code_Name__c</formula>
        <label>Ship CMF - Region Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CMF_Region_Code__c</fullName>
        <description>Ship CMF Region Code</description>
        <formula>Ship_CMF_Info__r.Ship_CMF_Region_Code__c</formula>
        <label>Ship CMF - Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF__c</fullName>
        <formula>Ship_CMF_Info__r.Ship_CMF__c</formula>
        <label>Ship-To CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Install_Date__c</fullName>
        <label>Specific Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Forms Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Additional Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to FB and/or Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-CDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Collected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Order_Total__c</fullName>
        <label>Stock Order-Total $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Order__c</fullName>
        <label>Stock Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street-Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toner_Order_Actual_End_Date__c</fullName>
        <inlineHelpText>Date Premium Paper Order Confirmation # is entered or Premium Paper Order is declined.</inlineHelpText>
        <label>Toner Order Actual End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>